Thu Oct  4 17:33:18 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (kcode_setter): Perl-ish global variable `$=' no longer
	  effective.

	* io.c (Init_IO): remove obsolete variables: $defout, $deferr.

	* re.c (Init_Regexp): remove obsolete const alias: MatchingData.

	* time.c (Init_Time): remove obsolete Time::times.

	* re.c (ignorecase_setter): change warning message.

	* re.c (ignorecase_getter): now gives warning.

	* string.c (rb_str_cmp_m): update RDoc document.

	* re.c (kcode_setter): restore erroneously removed setter.

Thu Oct  4 16:28:33 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_obj_encoding): returns encoding of the given object.

	* parse.y (reg_compile_gen): copy encoding from source string if
	  non-empty.

	* re.c (Init_Regexp): new method Regexp#encoding.

	* string.c (str_encoding): moved to encoding.c

Thu Oct  4 15:49:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_permutation): remove C99 dependency.
	  [ruby-dev:31934]

	* array.c (rb_ary_product): ditto.

Wed Oct  3 23:37:17 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/nkf/nkf.c, bin/ri, bin/irb: fixed typos in doc and comments.
	  a patch from Eugene Ossintsev  <eugoss AT gmail.com>.
	  [ruby-core:12375]

Wed Oct  3 17:56:22 2007  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: enable specify label to executable.
	  (-e "ruby1::/path/to/ruby1; ruby2::/path/to/ruby2; ...")

Wed Oct  3 16:58:48 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_str_new, parser_yylex, rb_intern3): set code-range
	  bits.

	* parse.y (parser_tokadd_string): check code-range.

	* parse.y (parser_parse_string, parser_here_document): ditto.

	* parse.y (parser_set_encode): check if valid encoding.

Wed Oct  3 15:43:15 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_cvar_set): check whether class variable is
	  defined in superclasses.  root classes have higher priority.